[gd_scene load_steps=6 format=3 uid="uid://obxqr4imymki"]

[ext_resource type="Script" path="res://Scenes/song_scene.gd" id="1_4be67"]
[ext_resource type="Texture2D" uid="uid://c6ebw2jhfhubg" path="res://Assets/back.png" id="2_wvhey"]
[ext_resource type="Texture2D" uid="uid://dchh7e86knq77" path="res://Assets/pause.png" id="3_qoj6n"]

[sub_resource type="Gradient" id="Gradient_itkhy"]
colors = PackedColorArray(1, 1, 1, 1, 0.41598, 0.41598, 0.41598, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_b8745"]
gradient = SubResource("Gradient_itkhy")
fill_to = Vector2(1, 1)

[node name="SongScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4be67")

[node name="BackgroundRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_b8745")

[node name="Header" type="ColorRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 0.0694444
color = Color(0.678431, 0.215686, 0.215686, 1)
metadata/_edit_use_anchors_ = true

[node name="BackButton" type="TextureButton" parent="Header"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.088
anchor_top = 0.486
anchor_right = 0.088
anchor_bottom = 0.486
offset_left = -30.2
offset_top = -30.0
offset_right = 29.8
offset_bottom = 30.0
texture_normal = ExtResource("2_wvhey")
ignore_texture_size = true
stretch_mode = 0
metadata/_edit_use_anchors_ = true

[node name="ScrollButton" type="TextureButton" parent="Header"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.89
anchor_top = 0.462
anchor_right = 0.89
anchor_bottom = 0.462
offset_left = -29.72
offset_top = -29.96
offset_right = 30.28
offset_bottom = 30.04
texture_normal = ExtResource("3_qoj6n")
ignore_texture_size = true
stretch_mode = 0

[node name="SongName" type="Label" parent="."]
layout_mode = 0
anchor_left = 0.0466667
anchor_top = 0.0975
anchor_right = 0.933333
anchor_bottom = 0.1475
offset_bottom = 1.52588e-05
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
metadata/_edit_use_anchors_ = true

[node name="SongTextContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0771605
anchor_top = 0.173611
anchor_right = 0.925926
anchor_bottom = 0.938368
metadata/_edit_use_anchors_ = true

[node name="SongText" type="Label" parent="SongTextContainer"]
custom_minimum_size = Vector2(550, 100)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
autowrap_mode = 1
metadata/_edit_use_anchors_ = true

[node name="ScrollTimer" type="Timer" parent="."]

[connection signal="pressed" from="Header/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="Header/ScrollButton" to="." method="_on_scroll_button_pressed"]
[connection signal="timeout" from="ScrollTimer" to="." method="_on_scroll_timer_timeout"]
